# Kairos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Justfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  CLOUD_RUN.md  DEVELOPER_GUIDE.md  GOOGLE_WORKSPACE_SETUP.md  LOCAL_QUEUE.md  MCP_SETUP.example.json  MCP_SETUP.md  TECH_DEBT.md
docs/archive/: README.md
docs/archive/hackathon/: PHASE_REVIEWS.md  THEME_LOG.md  VISION.md
docs/archive/research/: CURSOR.md
docs/demo-readiness/: DEMO.md  DEMO_SCRIPT.md  DEMO_SCRIPT_GAPS.md  FAQ.md  PHASE_REVIEWS.md  THEME_LOG.md  VISION.md
scripts/: test_x_api.py
scripts/manim/: README.md  kairos_flow.py
src/kairos/: __init__.py  cli.py  config.py
src/kairos/agent/: __init__.py  agent.py  config.py  harness.py  hooks.py  mcp_auth.py  prompts.py  tools.py
src/kairos/bookmarks/: __init__.py  cli.py  enrich.py  fingerprints.py  index.py  link_fetch.py  pipeline.py  prep_jobs.py  research.py  search.py  urls.py
src/kairos/core/: __init__.py  bandit.py  context.py  demo.py  eval_harness.py  fatigue.py  feedback.py  gepa_cron.py  headspace.py  heartbeat.py  intelligence.py  moment.py  notifications.py  optimize.py  ranking.py  rewards.py
src/kairos/db/: __init__.py  bandit.py  bookmarks.py  clusters.py  context_cache.py  events.py  feedback.py  google_tokens.py  metrics.py  mongo.py  notifications.py  oauth_states.py  optimization_runs.py  prep_jobs.py  sync_state.py  vector_search.py
src/kairos/delivery/: __init__.py  base.py  os.py  registry.py  render.py  web.py
src/kairos/embeddings/: encoder.py  gemini_encoder.py  local_encoder.py  similarity.py
src/kairos/google/: __init__.py  auth_check.py  calendar_client.py  connect.py  credentials.py  gmail_client.py  headspace_sync.py  scopes.py  verify.py
src/kairos/ingest/: __init__.py  enrich.py  sync.py
src/kairos/ingest/x/: __init__.py  auth.py  auth_check.py  callback_server.py  client.py  normalize.py  oauth.py
src/kairos/jobs/: __init__.py  arq_settings.py  dispatch.py  worker.py
src/kairos/llm/: __init__.py  client.py  compose.py  enrich_batch.py  enrichment.py  generation.py  grounding.py  interactions.py  research.py
src/kairos/mcp/: server.py
src/kairos/models/: __init__.py  jobs.py  optimize.py  schemas.py  sensors.py
src/kairos/observability/: __init__.py  bus.py  logging.py  narrate.py
src/kairos/sim/: __init__.py  context_sampler.py  feedback_model.py  gym.py  persona.py
src/kairos/util/: env_file.py
src/kairos/web/: __init__.py  app.py  server.py  session.py
src/kairos/web/static/: index.html  walkthrough.html
tests/: test_cluster_stable_ids.py  test_dispatch.py  test_headspace.py  test_link_fetch.py  test_notifications_scope.py  test_p3.py
