[project]
name = "kairos"
version = "0.1.0"
description = "Context-aware agent that learns when to surface bookmarks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-antigravity>=0.1.5",
    "google-genai>=2.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
kairos = "kairos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kairos"]

[tool.hatch.build.targets.sdist]
include = ["src/kairos"]
