[project]
name = "kairos"
version = "0.1.0"
description = "Context-aware agent that learns when to surface bookmarks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-antigravity>=0.1.5",
    "google-genai>=2.3.0",
    "httpx>=0.28",
    "motor>=3.6",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pymongo[srv]>=4.17.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "hdbscan>=0.8",
    "numpy>=1.26",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
kairos = "kairos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/kairos"]

[tool.hatch.build.targets.wheel.force-include]
"src/kairos/web/static" = "kairos/web/static"

[tool.hatch.build.targets.sdist]
include = ["src/kairos"]
