[project]
name = "kairos"
version = "0.1.0"
description = "Context-aware agent that learns when to surface bookmarks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.3.0",
    "httpx>=0.28",
    "motor>=3.6",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pymongo[srv]>=4.17.0",
    "python-dotenv>=1.0",
    "hdbscan>=0.8",
    "numpy>=1.26",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "loguru>=0.7",
    "mcp>=1.28",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.150",
    "google-adk>=2.0",
    "trafilatura>=2.0",
    "orjson>=3.10",
    "manimgl>=1.7.2",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0"]
queue = ["arq>=0.26", "redis>=5"]

[project.scripts]
kairos = "kairos.cli:main"
kairos-worker = "kairos.jobs.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/kairos"]

[tool.hatch.build.targets.wheel.force-include]
"src/kairos/web/static" = "kairos/web/static"

[tool.hatch.build.targets.sdist]
include = ["src/kairos"]
